--- a/webSitesiDeneme2/css/hizmetler/kosgeb.css
+++ b/webSitesiDeneme2/css/hizmetler/kosgeb.css
@@ -4,7 +4,6 @@
     margin-right: 10%;
     margin-bottom: 10px;
     padding: 10px;
-    font-size: larger;
 }
 .icerik lh{
     margin: 0px;
@@ -12,7 +11,8 @@
 .icindekiler{
     margin-left: 15%;
     margin-top : 130px;
-    width: fit-content;
+    width: 300px;
+    border: 1px solid black;
     border-radius: 15px;
 }
 .icindekiler a{
@@ -30,4 +30,25 @@ h5{
 
 html {
     scroll-padding-top: 110px; 
+}
+
+.kutular5{
+    display: flex;
+    justify-content: center;
+    
+}
+.kutular5 .kutu{
+    width: fit-content;
+    height: fit-content;
+    display: grid;
+    grid-template-columns: 300px;
+    grid-template-rows: 250px 50px 100px;
+    border: 1px solid black;
+    filter: drop-shadow(0px 0px 3px #000);
+    filter: blur(0.4px);
+    margin-left: 50px;
+}
+.kutular5 a{
+    text-decoration: none;
+    color: black;
 }
